# Vintage-Snake-Game-with-Raylib

./: CMakeLists.txt  main.cpp  run.sh
.cache/clangd/index/: food.cpp.DD12492FAC5C9E76.idx  food.h.21297190C1045A61.idx  game.cpp.B0FEB5D3E6B870B7.idx  game.h.D8FE132980D7E5B7.idx  global.cpp.74172B8C135A9202.idx  global.h.A7037890C8C64419.idx  main.cpp.269976F1907782B8.idx  snake.cpp.51555EB81F644326.idx  snake.h.0A1797F5EB276E5A.idx
src/body/: food.cpp  game.cpp  global.cpp  snake.cpp
src/header/: food.h  game.h  global.h  snake.h
